--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,3 +30,8 @@ header{
     text-align: center;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5) ;
 }
+img{
+    width: 100%;
+    height: auto;
+    display: block;
+}
