--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,4 +49,25 @@ footer{
     background: #333;
     color: #fff;
 }
-
+#quiz-container{
+    margin: auto;
+    width: 300px;
+    padding: 2px;
+    border: 1px soild #0c0c0c;
+    border-radius: 5px;
+}
+#options div{
+    margin-top: 10px;
+    padding: 5px;
+    background-color: #4008b1;
+    border: 1px soild #db27ab;
+    cursor: pointer;
+}
+#options div:hover {
+    background-color: #c03c3c;
+}
+button{
+    margin-top: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
