--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,82 +1,101 @@
-html,body{
+html,
+body {
     height: 100%;
 
 }
-body>footer{
+
+body>footer {
     position: sticky;
     top: 100%;
 }
+
 /**style nav bar to be like a desrt**/
-nav ul li{
+nav ul li {
     display: inline;
     margin-left: 15px;
     margin-right: 15px;
 }
 
-nav ul li a{
+nav ul li a {
     color: #fff;
     font-size: 1.2em;
 }
-nav ul{
+
+nav ul {
     padding: 0;
     list-style: none;
 }
-a{
+
+a {
     color: #fff;
     text-decoration: none;
 }
 
 
-a:hover{
+a:hover {
     color: #333;
 }
 
-header{
+header {
     background: rgb(194, 178, 128);
     color: #fff;
     padding: 20px 0;
     text-align: center;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5) ;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
-img{
+
+img {
     width: 100%;
     height: auto;
     display: block;
 }
-footer{
+
+footer {
     text-align: center;
     padding: 20px 0;
     background: #333;
     color: #fff;
 }
-#quiz-container{
+
+#quiz-container {
     margin: auto;
     width: 300px;
     padding: 2px;
     border: 1px soild #0c0c0c;
     border-radius: 5px;
 }
-#options div{
+
+#options div {
     margin-top: 10px;
     padding: 5px;
     background-color: #4008b1;
     border: 1px soild #db27ab;
     cursor: pointer;
 }
+
 #options div:hover {
     background-color: yellow;
 }
-button{
+
+button {
     margin-top: 20px;
     padding: 10px 20px;
     cursor: pointer;
 }
 
-#options .correct{
+#options .correct {
     background-color: green;
 
 }
-#options .incorrect{
+
+#options .incorrect {
     background-color: red;
-    
+
+}
+
+#score-container {
+    display: none;
+    /*initially hidden, shown when quiz starts*/
+    margin-top: 20px;
+    font-size: 1.2em;
 }
