--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ footer {
     margin: auto;
     width: 300px;
     padding: 2px;
-    border: 1px soild #ddd;
+    border: 1px solid #ddd; /* Fixed typo: "soild" to "solid" */
     border-radius: 5px;
 }
 
@@ -69,10 +69,11 @@ footer {
     margin-top: 10px;
     padding: 5px;
     background-color: #4008b1;
-    border: 1px soild #db27ab;
+    border: 1px solid #db27ab; 
     cursor: pointer;
-    transition: background-color 0.3;
+    transition: background-color 0.3s; 
 }
+
 
 #options div:hover {
     background-color: yellow;
@@ -85,22 +86,18 @@ button {
 }
 
 #options div.correct {
-    background-color: #c8e6c9;/*light green for correct answers*/
-
+    background-color: #c8e6c9; /*light green for correct answers*/
 }
 
-#options div .incorrect {
-    background-color: #ffcdd2;/*light for incorrect answers*/
-
+#options div.incorrect {
+    background-color: #ffcdd2; /*light for incorrect answers*/
 }
 
 #score-container {
-    display: none;
-    /*initially hidden, shown when quiz starts*/
     margin-top: 20px;
     font-size: 1.2em;
     display: none;
 }
-#timer{
+#timer {
     margin-top: 20px;
 }
