--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,12 +63,15 @@ footer {
     padding: 2px;
     border: 1px solid #ddd; /* Fixed typo: "soild" to "solid" */
     border-radius: 5px;
+    
 }
+
+
 
 #options div {
     margin-top: 10px;
     padding: 5px;
-    background-color: #4008b1;
+    background-color: #fff;
     border: 1px solid #db27ab; 
     cursor: pointer;
     transition: background-color 0.3s; 
